<resources>
    <string name="app_name">SpaceX Info</string>
    <string name="title_latest">Latest</string>
    <string name="title_rocket">Rockets</string>
    <string name="title_mission">Missions</string>
    <string name="title_info">Info</string>
    <string name="spacex_logo">SpaceXLogo</string>
    <string name="txt_rocket">Rocket</string>
    <string name="collapsing_image">Collapsing Image</string>
    <string name="txt_mission">Mission</string>
    <string name="txt_placeholder">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur</string>
    <string name="txt_launch_date">Launch Date</string>
    <string name="txt_launch_year">Launch Year</string>
    <string name="txt_launch_site">Launch Site</string>
    <string name="txt_demo_launch_site">Kennedy Space Center Historic Launch Complex 39A</string>
    <string name="txt_rocket_details"><![CDATA[Rocket Details >]]></string>
    <string name="txt_wikipedia">Wikipedia</string>
    <string name="txt_article">Article</string>
    <string name="txt_first_flight">First Flight</string>
    <string name="txt_status">Status</string>
    <string name="txt_technical_specifications">Technical Specifications</string>
    <string name="txt_height">Height</string>
    <string name="txt_diameter">Diameter</string>
    <string name="txt_mass">Mass</string>
    <string name="txt_stages">Stages</string>
    <string name="txt_first_stage">First Stage</string>
    <string name="txt_engines">Engines</string>
    <string name="txt_fuel_amount">Fuel Amount</string>
    <string name="txt_reusable">Reusable</string>
    <string name="txt_burn_time">Burn Time</string>
    <string name="txt_second_stage">Second Stage</string>
    <string name="txt_elon_musk">Elon Musk</string>
    <string name="txt_lead">Lead</string>
    <string name="txt_ceo">CEO</string>
    <string name="txt_cto">CTO</string>
    <string name="txt_cto_propulsion_dep">CTO Propulsion Dep.</string>
    <string name="txt_coo">COO</string>
    <string name="txt_statistics">Statistics</string>
    <string name="txt_valuation">Valuation</string>
    <string name="txt_employees">Employees</string>
    <string name="txt_vehicles">Vehicles</string>
    <string name="txt_upcoming_launch">Upcoming Launch</string>
    <string name="txt_mission_name">Mission Name</string>
    <string name="txt_date">Date</string>
    <string name="txt_previous_launch">Previous Launch</string>
    <string name="txt_previous_launches">Previous Launches</string>
</resources>
