<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txvMissionName"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:textColor="@color/white"
            android:textSize="@dimen/content_heading_txt_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Korean" />

        <TextView
            android:id="@+id/txvMissionDescription"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvMissionName"
            tools:text="@string/txt_placeholder" />

        <TextView
            android:id="@+id/txvLaunchDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/txt_launch_date"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvMissionDescription"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvLaunchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txvLaunchDateHeader"
            app:layout_constraintTop_toBottomOf="@+id/txvLaunchDateHeader"
            tools:text="November 3"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvLaunchYearHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/txt_launch_year"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_12"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvLaunchDateHeader"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvLaunchYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txvLaunchYearHeader"
            app:layout_constraintTop_toBottomOf="@+id/txvLaunchYearHeader"
            tools:text="2018"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvLaunchSiteHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/txt_launch_site"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvLaunchDate"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvLaunchSite"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txvLaunchYear"
            app:layout_constraintStart_toStartOf="@+id/txvLaunchSiteHeader"
            app:layout_constraintTop_toBottomOf="@+id/txvLaunchSiteHeader"
            tools:text="@string/txt_demo_launch_site"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvRocketHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/txt_rocket"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvLaunchSite"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvRocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txvRocketHeader"
            app:layout_constraintTop_toBottomOf="@+id/txvRocketHeader"
            tools:text="Falcon 1"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvRocketDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/txt_rocket_details"
            android:padding="@dimen/padding_4"
            android:textColor="@color/link_blue"
            android:textSize="@dimen/txt_12"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvRocket"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvWikiLinkHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/txt_wikipedia"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvRocket"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvWikiLink"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:textColor="@color/link_blue"
            android:textSize="@dimen/txt_12"
            app:layout_constraintEnd_toEndOf="@+id/txvRocketDetails"
            app:layout_constraintStart_toStartOf="@+id/txvWikiLinkHeader"
            app:layout_constraintTop_toBottomOf="@+id/txvWikiLinkHeader"
            tools:text="https://en.wikipedia.org/wiki/Koreasat_5A"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvSpacexLinkHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/txt_article"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvWikiLink"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txvSpacexLink"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:textColor="@color/link_blue"
            android:textSize="@dimen/txt_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txvWikiLink"
            app:layout_constraintStart_toStartOf="@+id/txvSpacexLinkHeader"
            app:layout_constraintTop_toBottomOf="@+id/txvSpacexLinkHeader"
            tools:text="https://en.wikipedia.org/wiki/Koreasat_5A"
            tools:visibility="visible" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
